Content updates, dynamic progress status for task list

--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+fary {% extends "layout.html" %}
 
 {% block pageTitle %}
 Remote education review framework
@@ -19,16 +19,14 @@ Remote education review framework
     </h1>
 
 
+    <p>Use this service to:</p>
 
-    <p class="govuk-body-l">A framework to help schools and colleges identify the strengths and areas for improvement in their remote education provision</p>
-
-    <h2 class="govuk-heading-m">
-      Applies to England
-    </h2>
-
-    <p>The remote education review framework has been produced to support schools and colleges in England to identify the strengths and areas for improvement in their remote education provision. It is not statutory, and you can adapt it to fit your school or college context.</p>
-
-    <p>The framework is for internal use, and should support detailed discussions on appropriate next steps. It can help you to meet basic requirements using the resources and tools you currently have (digital or physical) and to take your remote education provision further - with signposts to useful resources.</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>identify the strengths and areas for improvement in your school or college's remote education provision</li>
+      <li>understand how to meet basic requirements using the resources and tools you currently have</li>
+      <li>support detailed discussions on appropriate next steps</li>
+      <li>discover resources to help improve your remote education provision</li>
+    </ul>
 
     <br>
 
