--- a/app/views/v1/schools/summary.html
+++ b/app/views/v1/schools/summary.html
@@ -13,29 +13,33 @@ Task list
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">
-      Remote education review framework
+      What the remote education review framework is
     </h1>
 
-    <p>This framework has been produced to support schools in England to identify the strengths and areas for improvement in their remote education offer, and to signpost them to resources that can help them improve their practice.</p>
+    <p>Where pupils need to self-isolate, or there are local restrictions in place requiring pupils to remain at home, DfE expects schools to be able to immediately provide them with access to remote education. Full expectations for remote education provision, including on delivering remote education safely, are set out in the schools' <a href="https://www.gov.uk/government/publications/actions-for-schools-during-the-coronavirus-outbreak/guidance-for-full-opening-schools">guidance for full opening</a> and the <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision/what-fe-colleges-and-providers-will-need-to-do-from-the-start-of-the-2020-autumn-term">autumn term guidance for FE providers</a>.</p>
 
     <h2 class="govuk-heading-l">
-      Who is this framework for?
+      Who it is for
     </h2>
 
-    <p>This guidance is for MAT leaders, school leaders and governors in England.</p>
-
-    <h2 class="govuk-heading-l">
-      Aims of the framework
-    </h2>
-
-    <p>This framework aims to help MAT leaders, school leaders and governors in England to:</p>
+    <p>This framework is for:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>identify the strengths and areas for improvement in their school or trust's remote education provision</li>
-      <li>find resources (including training), guidance and networks to help them improve their provision</li>
+      <li>MAT leaders</li>
+      <li>schools leaders</li>
+      <li>governors</li>
+      <li>senior leaders in FE providers (including colleges, sixth from providers and independent training providers)</li>
     </ul>
 
+    <h2 class="govuk-heading-l">
+      How it works
+    </h2>
+
+    <p>You can work through the entire framework to identify strengths and areas for improvement in remote education with your senior leadership team (taking approximately 1 hour to complete as a group), or focus on specific sections that have been previously identified as priorities.</p>
+
+    <p>The framework is not intended as a compliance or accountability tool. It is not statutory, and schools and colleges can adapt it to fit their context. The framework differs from the <a href="https://www.gov.uk/government/publications/providing-remote-education-information-to-parents-template">remote education template</a>, which is a high-level summary of remote education provision for parents, carers and pupils.</p>
+
     <br>
-    <a href="why-schools-need-the-framework" class="govuk-button" data-module="govuk-button">
+    <a href="task-list" class="govuk-button" data-module="govuk-button">
       Continue</a>
 
   </div>
