--- a/app/views/v1/schools/recommendations.html
+++ b/app/views/v1/schools/recommendations.html
@@ -17,15 +17,10 @@ Question page
 
     <p>Based on the scores you have given so far, you could consider the following recommendations to improve your remote education provision.</p>
 
-    <p><a href="#">Printable version</a></p>
 
     <!-- <p>
       {% if data['leadership_remote-ed-plan'] === '1' %} you chose 1 {% endif %}
     </p> -->
-
-
-
-
 
 
     <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
@@ -126,9 +121,10 @@ Question page
 
 
     <br>
-    <a href="task-list" class="govuk-button" data-module="govuk-button">
-      Return to task list overview</a>
+    <p><a href="task-list">
+      Return to task list overview</a></p>
 
+      <p><a href="#">Print a copy of your recommendations</a></p>
 
 
 
