--- a/app/views/v1/schools/task-list.html
+++ b/app/views/v1/schools/task-list.html
@@ -16,7 +16,7 @@ Task list
       Remote education review framework
     </h1>
 
-
+    <p>The categories below provide a structure to identify the current position of your remote education provision. Assessing each category will help you to identify areas of strength and those needing further work.</p>
 
 
     <!-- <p>
