--- a/app/views/v1/schools/summary.html
+++ b/app/views/v1/schools/summary.html
@@ -18,6 +18,8 @@ Task list
 
     <p>Where pupils need to self-isolate, or there are local restrictions in place requiring pupils to remain at home, DfE expects schools to be able to immediately provide them with access to remote education. Full expectations for remote education provision, including on delivering remote education safely, are set out in the schools' <a href="https://www.gov.uk/government/publications/actions-for-schools-during-the-coronavirus-outbreak/guidance-for-full-opening-schools">guidance for full opening</a> and the <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision/what-fe-colleges-and-providers-will-need-to-do-from-the-start-of-the-2020-autumn-term">autumn term guidance for FE providers</a>.</p>
 
+    <p>The framework has been produced to support schools and colleges in England to identify the strengths and areas for improvement in their remote education provision. It provides links to guidance and resources to help you improve your provision.</p>
+
     <h2 class="govuk-heading-l">
       Who it is for
     </h2>
