--- a/app/views/v1/schools/curriculum-answers.html
+++ b/app/views/v1/schools/curriculum-answers.html
@@ -84,6 +84,8 @@ Question page
 
       <input type="hidden" name="answers-checked" value="true">
 
+            <input type="hidden" name="recommendations-referrer" value="curriculum">
+
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Get recommendations
       </button>
