--- a/app/views/v1/schools/capacity-answers.html
+++ b/app/views/v1/schools/capacity-answers.html
@@ -70,6 +70,8 @@ Question page
 
       <input type="hidden" name="answers-checked" value="true">
 
+      <input type="hidden" name="recommendations-referrer" value="capacity">
+
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Get recommendations
       </button>
