--- a/app/views/v1/schools/communication-answers.html
+++ b/app/views/v1/schools/communication-answers.html
@@ -56,6 +56,8 @@ Question page
 
       <input type="hidden" name="answers-checked" value="true">
 
+            <input type="hidden" name="recommendations-referrer" value="communication">
+
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Get recommendations
       </button>
