--- a/app/views/v1/schools/recpe-answers.html
+++ b/app/views/v1/schools/recpe-answers.html
@@ -98,6 +98,8 @@ Question page
 
       <input type="hidden" name="answers-checked" value="true">
 
+            <input type="hidden" name="recommendations-referrer" value="recpe">
+
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Get recommendations
       </button>
