Recommendations page, WIP

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -44,3 +44,9 @@ $govuk-assets-path: '/govuk/assets/';
   }
 
 }
+
+.statement-block {
+  background: #f3f2f1;
+  padding: 1rem;
+  margin-bottom: 2rem;
+}
