--- a/app/views/v1/schools/recommendations.html
+++ b/app/views/v1/schools/recommendations.html
@@ -17,11 +17,16 @@ Question page
 
     <p>Based on the scores you have given so far, you could consider the following recommendations to improve your remote education provision.</p>
 
+    <p><a href="#">Print a copy of your recommendations</a></p>
 
-    <!-- <p>
+    <p><a href="task-list">
+        Return to task list overview</a></p>
+
+  </div>
+  <!-- <p>
       {% if data['leadership_remote-ed-plan'] === '1' %} you chose 1 {% endif %}
     </p> -->
-
+  <div class="govuk-grid-column-full">
 
     <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
       <div class="govuk-accordion__section ">
@@ -33,20 +38,34 @@ Question page
           </h2>
         </div>
         <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
-          <p><strong>Because you scored less than 3 for Remote education plan:<strong></p>
-          <p>The EdTech Demonstrator Programme provides resources to support schools and colleges. This includes <a href="#">short videos</a> developed by schools and colleges on developing remote education plans, and <a href-="#">guidance</a> on how
-            to embed digital technology.</p>
-          <p>GOV.UK has brought together <a href="#">school-led webinars</a> to share best practice in setting up remote education.</p>
-          <p>For guidance on how to remain cyber-secure, please refer to <a href="#">Cyber security in schools: questions for governors and trustees</a></p>
-          <p>Read the <a href="#">guidance for full opening and refer to Oak National Academy for help to deliver a planned curriculum for all</a>.</p>
 
-          <p><strong>Because you scored less than 3 for Monitoring and evaluation:<strong></p>
-          <p>GOV.UK provides the following guidance:</p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li><a href="#">recording attendance in relation to coronavirus (COVID-19) during the 2020 to 2021 academic year</a></li>
-            <li><a href="#">full opening for schools: school workforce</a></li>
-            <li><a href="#">remote education good practice</a></li>
-          </ul>
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored 3 for remote education plan:</h3>
+
+            <p>The EdTech Demonstrator Programme provides resources to support schools and colleges. This includes <a href="#">short videos</a> developed by schools and colleges on developing remote education plans, and <a href-="#">guidance</a> on
+              how
+              to embed digital technology.</p>
+            <p>GOV.UK has brought together <a href="#">school-led webinars</a> to share best practice in setting up remote education.</p>
+            <p>For guidance on how to remain cyber-secure, please refer to <a href="#">Cyber security in schools: questions for governors and trustees</a></p>
+            <p>Read the <a href="#">guidance for full opening and refer to Oak National Academy for help to deliver a planned curriculum for all</a>.</p>
+          </div>
+
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored 5 for communication:</h3>
+            <p>something about having no recommendations
+            </p>
+          </div>
+
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored 3 for monitoring and evaluation:</h3>
+
+            <p>GOV.UK provides the following guidance:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="#">recording attendance in relation to coronavirus (COVID-19) during the 2020 to 2021 academic year</a></li>
+              <li><a href="#">full opening for schools: school workforce</a></li>
+              <li><a href="#">remote education good practice</a></li>
+            </ul>
+          </div>
 
         </div>
       </div>
@@ -120,59 +139,7 @@ Question page
     </div>
 
 
-    <br>
-    <p><a href="task-list">
-      Return to task list overview</a></p>
-
-      <p><a href="#">Print a copy of your recommendations</a></p>
-
-
-
-
-
   </div>
-
-
-  <!-- <div class="govuk-grid-column-one-third">
-    <aside class="app-related-items" role="complementary">
-      <h2 class="govuk-heading-m" id="subsection-title">
-        About the framework
-      </h2>
-      <nav role="navigation" aria-labelledby="subsection-title">
-        <ul class="govuk-list govuk-!-font-size-16">
-          <li>
-            <a href="using-the-framework">
-              Using the framework
-            </a>
-          </li>
-          <li>
-            <a href="scoring">
-              Scoring
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </aside>
-    <aside class="app-related-items" role="complementary">
-      <nav role="navigation" aria-labelledby="subsection-title">
-        <ul class="govuk-list govuk-!-font-size-16">
-          <li>
-            <a href="#">
-              View your task list
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              View your results
-            </a>
-            <span>[would only be shown once at least one section has been completed]</span>
-          </li>
-        </ul>
-      </nav>
-    </aside>
-  </div> -->
-
-
 
 
 </div>
