Recommendations page for schools, WIP

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -47,6 +47,6 @@ $govuk-assets-path: '/govuk/assets/';
 
 .statement-block {
   background: #f3f2f1;
-  padding: 1rem;
+  padding: 1rem 20% 1rem 1rem;
   margin-bottom: 2rem;
 }
