--- a/app/views/v1/schools/recommendations.html
+++ b/app/views/v1/schools/recommendations.html
@@ -249,20 +249,49 @@ Question page
           </h2>
         </div>
         <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
-          <p class='govuk-body'>You haven't yet given any scores for this section. Manage your <a href="task-list">outstanding tasks here</a></p>
+          {% if data['capacity-capability_effective-practice'] == null %}
+            <p class='govuk-body'>You haven't yet given any scores for this section. Manage your <a href="task-list">outstanding tasks here</a></p>
+          {% else %}
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['capacity-capability_effective-practice'] }} for effective practice:</h3>
+              {% if data['capacity-capability_effective-practice'] < 3 %}
+                <p>The Education Endowment Foundation provides <a href="https://educationendowmentfoundation.org.uk/covid-19-resources/national-tutoring-programme/covid-19-support-guide-for-schools/#closeSignup">a support guide for schools</a> designed to help teachers and school leaders support their pupils during remote education.</p>
+                <p>GOV.UK provides a <a href="https://www.gov.uk/government/publications/remote-education-good-practice/remote-education-good-practice#finding-solutions-in-remote-provision">good practice guide</a> to support schools in their delivery of remote education.</p>
+                <p>The EdTech Demonstrator Programme provides guidance on <a href="">how to use online platforms and resources</a>, including for children with SEND.</p>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['capacity-capability_staff-capability'] }} for staff capability:</h3>
+              {% if data['capacity-capability_staff-capability'] < 3 %}
+                <p>The <a href="https://edtech-demonstrator.lgfl.net/">EdTech Demonstrator Programme</a> provides advice, guidance and practical support for teachers on how to deliver good remote education. This includes guidance on <a href="https://edtech-demonstrator.lgfl.net/guidance">how to use online platforms and resources</a>, including for children with SEND.</p>
+                <p><a href="https://www.rnibbookshare.org/cms/">RNIB Bookshare</a>, which was established through DfE's pilot load2learn, is providing on-demand access to over 350,000 accessible digital books for schools - free for any learner with a <a href="https://www.rnibbookshare.org/cms/bookshare-me/who-qualifies">print disability</a>.</p>
+                <p><a href="https://pdnet.org.uk/">pdnet</a> provides free <a href="https://pdnet.org.uk/meetings-and-conferences/">training events</a> for teachers and professionals on augmentative and alternative communication technology to support pupils with SEND.</p>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['capacity-capability_strategic-partnerships'] }} for strategic partnerships:</h3>
+              {% if data['capacity-capability_strategic-partnerships'] < 3 %}
+                <p>There are several school-to-school support networks which you can make use of, including:</p>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>The <a href="https://edtech-demonstrator.lgfl.net/">EdTech Demonstrator Programme</a> for advice and guidance on remote education, including how to embed technology into teaching practice, and how to embed practice across MATs</li>
+                  <li><a href="https://www.gov.uk/guidance/get-support-from-your-local-maths-hub">Maths hubs</a> to improve maths education</li>
+                  <li><a href="https://www.gov.uk/guidance/get-support-from-your-local-english-education-hub">English hubs</a> to improve teaching of phonics, early language and reading in reception and year 1</li>
+                  <li><a href="https://www.gov.uk/guidance/get-support-from-your-local-computing-hub">Computing hubs</a> to improve the teaching of computing and increase participation in computer science</li>
+                </ul>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
 
 
-          <div class="statement-block">
-            <h3 class="govuk-heading-m">You scored {{ data[''] }} for XXXX:</h3>
-            {% if data[''] < 3 %}
-              <p>recommendations</p>
-            {% else %}
-              <p>something about having no recommendations</p>
-            {% endif %}
-          </div>
-
-
-
+          {% endif %}
         </div>
       </div>
 
@@ -281,7 +310,33 @@ Question page
           </h2>
         </div>
         <div id="accordion-default-content-5" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-5">
-          <p class='govuk-body'>Because all your scores in this section were above 3, we don't currently have any recommendations for you</p>
+          {% if data['communication_realistic-expectations'] == null %}
+            <p class='govuk-body'>You haven't yet given any scores for this section. Manage your <a href="task-list">outstanding tasks here</a></p>
+          {% else %}
+
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['communication_realistic-expectations'] }} for realistic expectations of pupils, parents and carers:</h3>
+              {% if data['communication_realistic-expectations'] < 3 %}
+                <p>Remote education expectations are highlighted in the <a href="https://www.gov.uk/government/publications/actions-for-schools-during-the-coronavirus-outbreak/guidance-for-full-opening-schools#res">guidance for full opening</a>.</p>
+                <p>GOV.UK has brought together <a href="">school-led webinars</a> to share best practice in setting up remote education.</p>
+                <p>The <a href="https://www.gov.uk/guidance/school-workload-reduction-toolkit#communications">school workload reduction toolkit</a> provides example communication policies and email protocols.</p>
+                <p>The Education Endowment Foundation has provided a <a href="https://educationendowmentfoundation.org.uk/public/files/Publications/Covid-19_Resources/Resources_for_schools/Communicating_Effectively_with_Families_-_Guide_for_Schools.pdf">guide for schools</a> on how to communicate with parents during COVID-19.</p>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['communication_community-events'] }} for school community events:</h3>
+              {% if data['communication_community-events'] < 3 %}
+                <p>recommendations</p>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
+
+          {% endif %}
         </div>
       </div>
 
@@ -300,7 +355,65 @@ Question page
           </h2>
         </div>
         <div id="accordion-default-content-6" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-6">
-          <p class='govuk-body'>You haven't yet given any scores for this section. Manage your <a href="task-list">outstanding tasks here</a></p>
+          {% if data['safeguarding_ensuring-safety'] == null %}
+            <p class='govuk-body'>You haven't yet given any scores for this section. Manage your <a href="task-list">outstanding tasks here</a></p>
+          {% else %}
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['safeguarding_ensuring-safety'] }} for ensuring safety:</h3>
+              {% if data['safeguarding_ensuring-safety'] < 3 %}
+                <p>GOV.UK provides guidance on <a href="https://www.gov.uk/guidance/safeguarding-and-remote-education-during-coronavirus-covid-19">Safeguarding and remote education during coronavirus (COVID-19)</a></p>
+                <p>Schools should also refer to <a href="https://www.gov.uk/government/publications/keeping-children-safe-in-education--2">statutory guidance for schools and colleges on safeguarding children</a>.</p>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['safeguarding_online-safety'] }} for online safety:</h3>
+              {% if data['safeguarding_online-safety'] < 3 %}
+                <p>GOV.UK provides guidance on:</p>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li><a href="https://www.gov.uk/guidance/safeguarding-and-remote-education-during-coronavirus-covid-19">Safeguarding and remote education during coronavirus (COVID-19)</a></li>
+                  <li><a href="https://www.gov.uk/government/publications/teaching-online-safety-in-schools">Teaching online safety in schools</a></li>
+                </ul>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['safeguarding_wellbeing'] }} for wellbeing:</h3>
+              {% if data['safeguarding_wellbeing'] < 3 %}
+                <p>GOV.UK provides advice on supporting pupil <a href="https://www.gov.uk/government/publications/actions-for-schools-during-the-coronavirus-outbreak/guidance-for-full-opening-schools#pupil-wellbeing-and-support">wellbeing during remote education</a>.</p>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['safeguarding_data-management'] }} for data management:</h3>
+              {% if data['safeguarding_data-management'] < 3 %}
+              <p>GOV.UK provides guidance to support schools:</p>
+              <ul class="govuk-list govuk-list--bullet">
+                <li>with <a href="https://www.gov.uk/government/publications/data-protection-toolkit-for-schools">data protection activity</a>, including compliance with GDPR</li>
+                <li>to be <a href="https://www.ncsc.gov.uk/information/school-governor-questions">cyber secure</a></li>
+              </ul>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
+
+            <div class="statement-block">
+              <h3 class="govuk-heading-m">You scored {{ data['safeguarding_behaviour'] }} for behaviour and attitude:</h3>
+              {% if data['safeguarding_behaviour'] < 3 %}
+                <p>GOV.UK provides guidance on <a href="https://www.gov.uk/government/publications/actions-for-schools-during-the-coronavirus-outbreak/guidance-for-full-opening-schools#behaviour-expectations">behaviour expectations</a> in schools.</p>
+              {% else %}
+                <p>something about having no recommendations</p>
+              {% endif %}
+            </div>
+
+          {% endif %}
         </div>
       </div>
 
