updates, lots of updates

--- a/app/views/v1/schools/capacity-answers.html
+++ b/app/views/v1/schools/capacity-answers.html
@@ -70,11 +70,11 @@ Question page
 
       <input type="hidden" name="answers-checked" value="true">
 
-      <input type="hidden" name="recommendations-referrer" value="capacity">
-
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Get recommendations
       </button>
+
+      <input type="hidden" name="referrer" value="capacity">
 
     </form>
 
