--- a/app/views/v1/schools/curriculum-answers.html
+++ b/app/views/v1/schools/curriculum-answers.html
@@ -84,7 +84,7 @@ Question page
 
       <input type="hidden" name="answers-checked" value="true">
 
-            <input type="hidden" name="recommendations-referrer" value="curriculum">
+            <input type="hidden" name="referrer" value="curriculum">
 
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Get recommendations
