--- a/app/views/v1/schools/safeguarding-answers.html
+++ b/app/views/v1/schools/safeguarding-answers.html
@@ -98,7 +98,7 @@ Question page
 
       <input type="hidden" name="answers-checked" value="true">
 
-            <input type="hidden" name="recommendations-referrer" value="safeguarding">
+            <input type="hidden" name="referrer" value="safeguarding">
 
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Get recommendations
