--- a/app/views/v1/schools/curriculum-4.html
+++ b/app/views/v1/schools/curriculum-4.html
@@ -25,36 +25,6 @@ Question page
       <p>The school provides feedback, at least weekly, using digitally-facilitated or whole-class feedback where appropriate.</p>
 
 
-      <details class="govuk-details" data-module="govuk-details">
-        <summary class="govuk-details__summary">
-          <span class="govuk-details__summary-text">
-            Help with scoring
-          </span>
-        </summary>
-        <div class="govuk-details__text">
-          <p><strong>1. Identify</strong><br>
-            Not yet in place or there are major gaps.
-          </p>
-          <p><strong>2. Develop and plan</strong><br>
-            Identified gaps but a plan is being developed to address them.
-          </p>
-          <p><strong>3. Implement</strong><br>
-            In the process of implementing systems and practices to address this.
-          </p>
-          <p><strong>4. Embed</strong><br>
-            Practices and systems are in place with minor gaps.
-          </p>
-          <p><strong>5. Sustain</strong><br>
-            Practices and systems are fully embedded, and there are examples of best practice.
-          </p>
-
-        </div>
-      </details>
-
-
-
-
-
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
           <div class="govuk-radios govuk-radios--small govuk-radios--inline">
@@ -100,17 +70,9 @@ Question page
   </div>
 
 
-  <!-- <div class="govuk-grid-column-one-third">
-    <aside class="app-related-items" role="complementary">
-      <h2 class="govuk-heading-m" id="subsection-title">
-        Return to this later
-      </h2>
-      <p><a href="#">
-          Save my progress
-        </a></p>
-      <p>To make sure your review and results will not be lost at any time, get a reference code.</p>
-    </aside>
-  </div> -->
+  <div class="govuk-grid-column-one-third">
+    {% include "v1/schools/scoring_aside.html" %}
+  </div>
 
 
 
