--- a/app/views/v1/schools/leadership-answers.html
+++ b/app/views/v1/schools/leadership-answers.html
@@ -70,7 +70,7 @@ Question page
 
       <input type="hidden" name="answers-checked" value="true">
 
-            <input type="hidden" name="recommendations-referrer" value="leadership">
+            <input type="hidden" name="referrer" value="leadership">
 
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Get recommendations
